tests/ui/write-twice.stderr
error[E0382]: use of moved value: `f`
 --> $DIR/write-twice.rs:6:23
  |
4 |     fn format(&self, f: defmt::Formatter) {
  |                      - move occurs because `f` has type `defmt::Formatter<'_>`, which does not implement the `Copy` trait
5 |         defmt::write!(f, "hello");
  |                       - value moved here
6 |         defmt::write!(f, "world");
  |                       ^ value used here after move
